feat: content header

--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
           <div class="bordered">
             <i class="fa-brands fa-discord"></i>
           </div>
-          <div class="bordered">Link Link Link Link Link</div>
-          <div class="bordered">Login</div>
+          <div class="bordered">
+            <ul class="list-oriz">
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#">Perchè Discord</a></li>
+              <li><a href="#">Nitro</a></li>
+              <li><a href="#">Sicurezza</a></li>
+              <li><a href="#">Assistenza</a></li>
+            </ul>
+          </div>
+          <div class="bordered">Accedi</div>
         </nav>
       </div>
     </header>
