feat: add content Jumbotron

--- a/index.html
+++ b/index.html
@@ -41,7 +41,19 @@
 
     <!-- # JUMBOTRON -->
     <div class="jumbotron bg-blue">
-      <div class="container bg-fuchsia bordered"></div>
+      <div class="container bg-fuchsia bordered">
+        <h1>Il tuo posto per parlare</h1>
+        <p>
+          Che tu faccia parte di un club scolastico, gruppo di gamer, comunità
+          artistica mondiale, o semplicemente di un piccolo gruppo di amici che
+          vuole passare il tempo assieme, Discord rende più facile chiacchierare
+          ogni giorno e ritrovarsi più spesso.
+        </p>
+        <div>
+          <button><a href="#">Scarica per Mac</a></button>
+          <button><a href="#">Apri Discord nel tuo browser</a></button>
+        </div>
+      </div>
     </div>
 
     <!-- MAIN -->
