feat: add content first section

--- a/index.html
+++ b/index.html
@@ -61,8 +61,19 @@
       <!-- FIRST SECTION -->
       <section class="bg-white main-section">
         <div class="container flex tall">
-          <div class="large-col bg-azure bordered"></div>
-          <div class="small-col bg-pink bordered"></div>
+          <div class="large-col bg-azure bordered">
+            <img src="./img/item1.svg" alt="" />
+          </div>
+          <div class="small-col bg-pink bordered">
+            <h2>
+              Un luogo a invito con tutto lo spazio necessario per parlare
+            </h2>
+            <p>
+              I server Discord sono organizzati in canali tematici in cui puoi
+              collaborare, condividere o semplicemente parlare della tua
+              giornata senza intasare una chat di gruppo
+            </p>
+          </div>
         </div>
       </section>
 
