feat: add content second section

--- a/index.html
+++ b/index.html
@@ -80,8 +80,17 @@
       <!-- SECOND SECTION -->
       <section class="bg-gray main-section">
         <div class="container flex d-row-reverse tall">
-          <div class="large-col bg-azure bordered"></div>
-          <div class="small-col bg-pink bordered"></div>
+          <div class="large-col bg-azure bordered">
+            <img src="./img/item2.svg" alt="" />
+          </div>
+          <div class="small-col bg-pink bordered">
+            <h2>Dove trovarsi é facile</h2>
+            <p>
+              Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel
+              tuo server possono vedere che sei lì e unirsi istantaneamente
+              senza dover chiamare.
+            </p>
+          </div>
         </div>
       </section>
 
