--- a/index.html
+++ b/index.html
@@ -97,15 +97,35 @@
       <!-- THIRD SECTION -->
       <section class="bg-white main-section">
         <div class="container flex tall">
-          <div class="large-col bg-azure bordered"></div>
-          <div class="small-col bg-pink bordered"></div>
+          <div class="large-col bg-azure bordered">
+            <img src="./img/item3.svg" alt="" />
+          </div>
+          <div class="small-col bg-pink bordered">
+            <h2>Da pochi a un fandom</h2>
+            <p>
+              Dai inizio a una community di qualsiasi dimensione con strumenti
+              di moderazione e accesso ai membri personalizzabile. Concedi ai
+              membri poteri speciali, crea canali privati, e molto altro.
+            </p>
+          </div>
         </div>
       </section>
 
       <!-- FOURTH SECTION -->
       <section class="bg-gray main-section">
         <div class="container">
-          <div class="bg-green bordered taller"></div>
+          <div class="bg-green bordered taller">
+            <h2>Tecnologia affidabile per tenersi in contatto</h2>
+            <p>
+              Video e audio a bassa latenza ti faranno sentire come se foste
+              tutti nella stessa stanza. Fai ciao in video, guarda gli amici
+              giocare in streaming, o riunitevi in una sessione di disegno con
+              la condivisione schermo.
+            </p>
+            <img src="./img/item4-big.svg" alt="" />
+            <h3>Pronto a iniziare la tua avventura</h3>
+            <button>&#129043;Scarica per Mac</button>
+          </div>
         </div>
       </section>
     </main>
