feat: add content and icon left column footer

--- a/index.html
+++ b/index.html
@@ -134,7 +134,19 @@
     <footer class="bg-darkgray">
       <div class="footer-top">
         <div class="container flex">
-          <div class="col-30 bg-salmon bordered taller"></div>
+          <div class="col-30 bg-salmon bordered taller">
+            <h2>Il tuo posto per parlare</h2>
+            <div>
+              <img src="./img/ita.png" alt="" />
+              <span>Italiano &#5167;</span>
+            </div>
+            <div>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
           <div class="col-70 bg-teal bordered taller flex">
             <div class="col-25 bordered-white">
               <ul>
