--- a/index.html
+++ b/index.html
@@ -150,39 +150,47 @@
           <div class="col-70 bg-teal bordered taller flex">
             <div class="col-25 bordered-white">
               <ul>
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
-                <li>Link 4</li>
-                <li>Link 5</li>
+                <li>Prodotto</li>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perchè Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
               </ul>
             </div>
             <div class="col-25 bordered-white">
               <ul>
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
-                <li>Link 4</li>
-                <li>Link 5</li>
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
-                <li>Link 4</li>
-                <li>Link 5</li>
+                <li>Compagnia</li>
+                <li><a href="#">Chi siamo</a></li>
+                <li><a href="#">Lavora con noi</a></li>
+                <li><a href="#">Marchio</a></li>
+                <li><a href="#">Redazione</a></li>
+                <li><a href="#">Negozio</a></li>
               </ul>
             </div>
             <div class="col-25 bordered-white">
               <ul>
-                <li>Link 1</li>
-                <li>Link 2</li>
+                <li>Risorse</li>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perchè Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perchè Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
               </ul>
             </div>
             <div class="col-25 bordered-white">
               <ul>
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
-                <li>Link 4</li>
+                <li>Norme</li>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perchè Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
               </ul>
             </div>
           </div>
