feat: add content footer botton

--- a/index.html
+++ b/index.html
@@ -198,8 +198,12 @@
       </div>
       <div class="footer-bottom">
         <div class="container bg-aquamarine flex justify-between align-center">
-          <div class="bordered bg-lightpink">Logo</div>
-          <div class="bordered bg-lightpink">Button</div>
+          <div class="bordered bg-lightpink">
+            <img src="./img/logo.svg" alt="" />
+          </div>
+          <div class="bordered bg-lightpink">
+            <button>Registrati</button>
+          </div>
         </div>
       </div>
     </footer>
