fix: logo discord in header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <nav class="bg-golden flex justify-between align-center">
           <div class="bordered">
-            <i class="fa-brands fa-discord"></i>
+            <img src="./img/logo.svg" alt="" />
           </div>
           <div class="bordered">
             <ul class="list-oriz">
