feat: bg color header and color text

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   </head>
   <body class="debug">
     <!-- # HEADER -->
-    <header class="bg-cyan">
+    <header class="bg-royalblue">
       <div class="container">
-        <nav class="bg-golden flex justify-between align-center">
+        <nav class="flex justify-between align-center">
           <div class="bordered">
             <img src="./img/logo.svg" alt="" />
           </div>
           <div class="bordered">
-            <ul class="list-oriz">
+            <ul class="list-oriz text-white">
               <li><a href="#">Scarica</a></li>
               <li><a href="#">Perchè Discord</a></li>
               <li><a href="#">Nitro</a></li>
