--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <!-- # JUMBOTRON -->
     <div class="jumbotron bg-blue">
-      <div class="container bg-fuchsia bordered">
-        <h1>Il tuo posto per parlare</h1>
+      <div class="container bordered text-center text-white">
+        <h1 class="bigger">Il tuo posto per parlare</h1>
         <p>
           Che tu faccia parte di un club scolastico, gruppo di gamer, comunità
           artistica mondiale, o semplicemente di un piccolo gruppo di amici che
