--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
       <!-- FIRST SECTION -->
       <section class="bg-white main-section">
         <div class="container flex tall">
-          <div class="large-col bg-azure bordered">
+          <div class="large-col bordered">
             <img src="./img/item1.svg" alt="" />
           </div>
-          <div class="small-col bg-pink bordered">
-            <h2>
+          <div class="small-col bordered">
+            <h2 class="bigger">
               Un luogo a invito con tutto lo spazio necessario per parlare
             </h2>
-            <p>
+            <p class="text-heavier">
               I server Discord sono organizzati in canali tematici in cui puoi
               collaborare, condividere o semplicemente parlare della tua
               giornata senza intasare una chat di gruppo
