feat: second section add style and fix bg color

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
       </section>
 
       <!-- SECOND SECTION -->
-      <section class="bg-gray main-section">
+      <section class="bg-lightgrey main-section">
         <div class="container flex d-row-reverse tall">
-          <div class="large-col bg-azure bordered">
+          <div class="large-col bordered">
             <img src="./img/item2.svg" alt="" />
           </div>
-          <div class="small-col bg-pink bordered">
-            <h2>Dove trovarsi é facile</h2>
-            <p>
+          <div class="small-col bordered">
+            <h2 class="bigger">Dove trovarsi é facile</h2>
+            <p class="text-heavier">
               Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel
               tuo server possono vedere che sei lì e unirsi istantaneamente
               senza dover chiamare.
