--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
       <!-- THIRD SECTION -->
       <section class="bg-white main-section">
         <div class="container flex tall">
-          <div class="large-col bg-azure bordered">
+          <div class="large-col bordered">
             <img src="./img/item3.svg" alt="" />
           </div>
-          <div class="small-col bg-pink bordered">
-            <h2>Da pochi a un fandom</h2>
-            <p>
+          <div class="small-col bordered">
+            <h2 class="bigger">Da pochi a un fandom</h2>
+            <p class="text-heavier">
               Dai inizio a una community di qualsiasi dimensione con strumenti
               di moderazione e accesso ai membri personalizzabile. Concedi ai
               membri poteri speciali, crea canali privati, e molto altro.
