feat: fourth section add classes style

--- a/index.html
+++ b/index.html
@@ -112,18 +112,20 @@
       </section>
 
       <!-- FOURTH SECTION -->
-      <section class="bg-gray main-section">
-        <div class="container">
-          <div class="bg-green bordered taller">
-            <h2>Tecnologia affidabile per tenersi in contatto</h2>
-            <p>
+      <section class="bg-lightgrey main-section">
+        <div class="container text-center">
+          <div class="bordered taller">
+            <h2 class="bigger">
+              Tecnologia affidabile per tenersi in contatto
+            </h2>
+            <p class="text-heavier">
               Video e audio a bassa latenza ti faranno sentire come se foste
               tutti nella stessa stanza. Fai ciao in video, guarda gli amici
               giocare in streaming, o riunitevi in una sessione di disegno con
               la condivisione schermo.
             </p>
             <img src="./img/item4-big.svg" alt="" />
-            <h3>Pronto a iniziare la tua avventura</h3>
+            <h2>Pronto a iniziare la tua avventura?</h2>
             <button>&#129043;Scarica per Mac</button>
           </div>
         </div>
