feat: footer top column left add style

--- a/index.html
+++ b/index.html
@@ -137,12 +137,16 @@
       <div class="footer-top">
         <div class="container flex">
           <div class="col-30 bg-salmon bordered taller">
-            <h2>Il tuo posto per parlare</h2>
-            <div>
-              <img src="./img/ita.png" alt="" />
-              <span>Italiano &#5167;</span>
+            <h2 class="text-royalblue">Il tuo posto per parlare</h2>
+            <div class="flex align-center">
+              <img id="flag-language" src="./img/ita.png" alt="" />
+              <select class="btn-select text-white">
+                <option value="Italiano">Italiano</option>
+                <option value="Inglese">Inglese</option>
+                <option value="Spagnolo">Spagnolo</option>
+              </select>
             </div>
-            <div>
+            <div class="text-white">
               <i class="fa-brands fa-twitter"></i>
               <i class="fa-brands fa-instagram"></i>
               <i class="fa-brands fa-facebook"></i>
