feat: footer top add style list

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <footer class="bg-darkgray">
       <div class="footer-top">
         <div class="container flex">
-          <div class="col-30 bg-salmon bordered taller">
+          <div class="col-30 bordered taller">
             <h2 class="text-royalblue">Il tuo posto per parlare</h2>
             <div class="flex align-center">
               <img id="flag-language" src="./img/ita.png" alt="" />
@@ -153,10 +153,10 @@
               <i class="fa-brands fa-youtube"></i>
             </div>
           </div>
-          <div class="col-70 bg-teal bordered taller flex">
+          <div class="col-70 bordered taller flex text-white">
             <div class="col-25 bordered-white">
-              <ul>
-                <li>Prodotto</li>
+              <ul class="list-none">
+                <li class="text-royalblue text-heavier">Prodotto</li>
                 <li><a href="#">Scarica</a></li>
                 <li><a href="#">Perchè Discord</a></li>
                 <li><a href="#">Nitro</a></li>
@@ -165,8 +165,8 @@
               </ul>
             </div>
             <div class="col-25 bordered-white">
-              <ul>
-                <li>Compagnia</li>
+              <ul class="list-none">
+                <li class="text-royalblue text-heavier">Compagnia</li>
                 <li><a href="#">Chi siamo</a></li>
                 <li><a href="#">Lavora con noi</a></li>
                 <li><a href="#">Marchio</a></li>
@@ -175,8 +175,8 @@
               </ul>
             </div>
             <div class="col-25 bordered-white">
-              <ul>
-                <li>Risorse</li>
+              <ul class="list-none">
+                <li class="text-royalblue text-heavier">Risorse</li>
                 <li><a href="#">Scarica</a></li>
                 <li><a href="#">Perchè Discord</a></li>
                 <li><a href="#">Nitro</a></li>
@@ -190,8 +190,8 @@
               </ul>
             </div>
             <div class="col-25 bordered-white">
-              <ul>
-                <li>Norme</li>
+              <ul class="list-none">
+                <li class="text-royalblue text-heavier">Norme</li>
                 <li><a href="#">Scarica</a></li>
                 <li><a href="#">Perchè Discord</a></li>
                 <li><a href="#">Nitro</a></li>
