feat: jumbotron add btn

--- a/index.html
+++ b/index.html
@@ -41,17 +41,21 @@
 
     <!-- # JUMBOTRON -->
     <div class="jumbotron bg-blue">
-      <div class="container bordered text-center text-white">
-        <h1 class="bigger">Il tuo posto per parlare</h1>
-        <p>
+      <div class="container bordered text-center">
+        <h1 class="bigger text-white">Il tuo posto per parlare</h1>
+        <p class="text-white">
           Che tu faccia parte di un club scolastico, gruppo di gamer, comunità
           artistica mondiale, o semplicemente di un piccolo gruppo di amici che
           vuole passare il tempo assieme, Discord rende più facile chiacchierare
           ogni giorno e ritrovarsi più spesso.
         </p>
-        <div>
-          <button><a href="#">Scarica per Mac</a></button>
-          <button><a href="#">Apri Discord nel tuo browser</a></button>
+        <div class="flex justify-center align-center">
+          <div class="btn btn-primary">
+            <a class="text-black" href="#">&#129047; Scarica per Mac</a>
+          </div>
+          <div class="btn btn-secondary">
+            <a class="text-white" href="#">Apri Discord nel tuo browser</a>
+          </div>
         </div>
       </div>
     </div>
