feat: header add btn small

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <li><a href="#">Assistenza</a></li>
             </ul>
           </div>
-          <div class="bordered">Accedi</div>
+          <div class="btn btn-primary btn-small">Accedi</div>
         </nav>
       </div>
     </header>
