fix: header btn small

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
               <li><a href="#">Assistenza</a></li>
             </ul>
           </div>
-          <div class="btn btn-primary btn-small">Accedi</div>
+          <div class="btn btn-primary btn-small">
+            <a class="text-black" href="#">Accedi</a>
+          </div>
         </nav>
       </div>
     </header>
