feat:  third section add btn tertiary

--- a/index.html
+++ b/index.html
@@ -131,8 +131,12 @@
               la condivisione schermo.
             </p>
             <img src="./img/item4-big.svg" alt="" />
-            <h2>Pronto a iniziare la tua avventura?</h2>
-            <button>&#129043;Scarica per Mac</button>
+            <div class="flex d-column justify-center align-center">
+              <h2>Pronto a iniziare la tua avventura?</h2>
+              <div class="btn btn-tertiary">
+                <a class="text-white" href="#">&#129047; Scarica per Mac</a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
