feat: footer bottom add btn smal tertiary

--- a/index.html
+++ b/index.html
@@ -213,12 +213,14 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <div class="container bg-aquamarine flex justify-between align-center">
-          <div class="bordered bg-lightpink">
+        <div class="container flex justify-between align-center">
+          <div class="bordered">
             <img src="./img/logo.svg" alt="" />
           </div>
-          <div class="bordered bg-lightpink">
-            <button>Registrati</button>
+          <div class="bordered">
+            <div class="btn btn-tertiary btn-small">
+              <a class="text-white" href="#">Registrati</a>
+            </div>
           </div>
         </div>
       </div>
