--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <main>
       <!-- FIRST SECTION -->
       <section class="bg-white main-section">
-        <div class="container flex tall">
+        <div class="container flex tall pad-section">
           <div class="large-col bordered">
             <img src="./img/item1.svg" alt="" />
           </div>
@@ -85,7 +85,7 @@
 
       <!-- SECOND SECTION -->
       <section class="bg-lightgrey main-section">
-        <div class="container flex d-row-reverse tall">
+        <div class="container flex d-row-reverse tall pad-section">
           <div class="large-col bordered">
             <img src="./img/item2.svg" alt="" />
           </div>
@@ -102,7 +102,7 @@
 
       <!-- THIRD SECTION -->
       <section class="bg-white main-section">
-        <div class="container flex tall">
+        <div class="container flex tall pad-section">
           <div class="large-col bordered">
             <img src="./img/item3.svg" alt="" />
           </div>
@@ -120,7 +120,7 @@
       <!-- FOURTH SECTION -->
       <section class="bg-lightgrey main-section">
         <div class="container text-center">
-          <div class="bordered taller">
+          <div class="bordered taller pad-section">
             <h2 class="bigger">
               Tecnologia affidabile per tenersi in contatto
             </h2>
@@ -146,7 +146,7 @@
     <footer class="bg-darkgray">
       <div class="footer-top">
         <div class="container flex">
-          <div class="col-30 bordered taller">
+          <div class="col-30 bordered taller pad-section">
             <h2 class="text-royalblue">Il tuo posto per parlare</h2>
             <div class="flex align-center">
               <img id="flag-language" src="./img/ita.png" alt="" />
@@ -163,7 +163,7 @@
               <i class="fa-brands fa-youtube"></i>
             </div>
           </div>
-          <div class="col-70 bordered taller flex text-white">
+          <div class="col-70 bordered taller flex text-white pad-section">
             <div class="col-25 bordered-white">
               <ul class="list-none">
                 <li class="text-royalblue text-heavier">Prodotto</li>
