feat: fourth section star background

--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
             </p>
             <img src="./img/item4-big.svg" alt="" />
             <div class="flex d-column justify-center align-center">
-              <h2>Pronto a iniziare la tua avventura?</h2>
+              <div class="star">
+                <h2>Pronto a iniziare la tua avventura?</h2>
+              </div>
               <div class="btn btn-tertiary">
                 <a class="text-white" href="#">&#129047; Scarica per Mac</a>
               </div>
