--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
         </div>
       </section>
 
+      <div class="wave"></div>
+
       <!-- SECOND SECTION -->
       <section class="bg-lightgrey main-section">
         <div class="container flex d-row-reverse tall pad-section">
@@ -100,6 +102,8 @@
         </div>
       </section>
 
+      <div class="wave"></div>
+
       <!-- THIRD SECTION -->
       <section class="bg-white main-section">
         <div class="container flex tall pad-section">
@@ -116,6 +120,8 @@
           </div>
         </div>
       </section>
+
+      <div class="wave"></div>
 
       <!-- FOURTH SECTION -->
       <section class="bg-lightgrey main-section">
